Prevent invisible characters from affecting block height

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ main {
     font-size: 12px;
   }
 
+  &__canvas {
+    position: absolute;
+  }
+
   &__node {
     cursor: pointer;
     padding: 5px;
